@@ -1,5 +1,5 @@
 desc=Updated script installers
-html=Updated the bbPress script installer to version 1.0.3, ZenPhoto to 1.4.0.3, Joomla to 1.6.1, Zikula to 1.2.6, SugarCRM to 6.1.3, FengOffice to 1.7.4, CMS Made Simple to 1.9.4.1, Nucleus to 3.64, SugarCRM to 6.2.0beta, phpMyAdmin to 3.3.10, Piwik to 1.2.1, Django to 1.3, TextPattern to 4.4.0, Dolibarr to 3.0.0, Joomla to 1.5.23, and Redmine to 1.1.2.
+html=Updated the bbPress script installer to version 1.0.3, ZenPhoto to 1.4.0.3, Joomla to 1.6.1, Zikula to 1.2.6, SugarCRM to 6.1.3, FengOffice to 1.7.4, CMS Made Simple to 1.9.4.1, Nucleus to 3.64, SugarCRM to 6.2.0beta, phpMyAdmin to 3.3.10, Piwik to 1.2.1, Django to 1.3, TextPattern to 4.4.0, Dolibarr to 3.0.0, Joomla to 1.5.23, and Redmine to 1.1.2.<br>Added a script installer for WHMCS 4.4.2. This is a commerical product, so you will need to purchase a licence for it before using the installer though.
 master=1
 reseller=1
 domain=1
